--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,12 @@ dependencies {
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.boot:spring-boot-security-test'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+//	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.7.7'
+
 }
 
 tasks.named('test') {
