--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,12 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	testImplementation 'org.springframework.boot:spring-boot-security-test'
-	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	testImplementation 'org.springframework.boot:spring-boot-security-test'
+//	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 //	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.7.7'
-
+//	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+//	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
 }
 
 tasks.named('test') {
