--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none #테이블이 만들어지면 update로 바꾸기 create , none
+      ddl-auto: update #테이블이 만들어지면 update로 바꾸기 create , none
     properties:
       hibernate:
         format_sql: true #To beautify or pretty print the SQL
