--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 //	testImplementation 'org.springframework.boot:spring-boot-security-test'
 //	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
-//	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.7.7'
+	implementation 'org.modelmapper:modelmapper:2.4.2'
 //	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
 //	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
 
